@@ -3,9 +3,6 @@ To do in this branch before merging back to trunk
 
 - Send email when response is added.
 
-- Update SearchableText of issue when response in
-  added/changed/removed.
-
 - Add i18n (to avoid problems in merging it is probably best not to
   actually run ./i18n/rebuildAll.sh).
 
